<resources>
    <string name="app_name">StocksPLUS</string>
    <string name="login_screen_label">StocksPlus</string>

    <!-- Registration-->
    <string name="registration_title">Registration</string>
    <string name="registration_first_name">Firstname</string>
    <string name="registration_last_name">Lastname</string>
    <string name="registration_email">Email</string>
    <string name="registration_phone">Phone</string>
    <string name="registration_user_name">Username</string>
    <string name="registration_password">Password</string>
    <string name="registration_confirm_password">Confirm password</string>
    <string name="registration_sign_up">Sign up</string>
    <string name="registration_register_title">Register</string>
    <string name="registration_register_message">You are registered</string>

    <!-- Login -->
    <string name="login_screen_save_me">Save me:</string>
    <string name="login_screen_hint_user">Username</string>
    <string name="login_screen_hint_pass">Password</string>
    <string name="login_screen_button_login">Login</string>
    <string name="login_screen_forgot_pass">Forgot your password?</string>
    <string name="login_screen_new_user">New user? Register</string>

    <!-- Dialogs -->
    <string name="positive_button_text">OK</string>
    <string name="add_stock_dialog_button_add">Add</string>
    <string name="add_stock_dialog__button_cancel">Cancel</string>
    <string name="add_stock_dialog_title">Add stock</string>
    <string name="add_stock_dialog_message">Add new ticker</string>
    <string name="add_stock_dialog_edit_text_hint">Enter new ticker</string>

    <!-- Errors -->
    <string name="warning">Warning</string>
    <string name="un_or_pass_is_empty">Please input username or password</string>
    <string name="fields_filled_incorrect_title">Fields filled incorrect</string>
    <string name="fields_filled_incorrect_message">Not all fields filled or password not matched.</string>
    <string name="failed_to_connect_title">Connection error</string>
    <string name="failed_to_connect_message">Failed to connect with server.</string>
    <string name="auth_error_title">Auth error</string>
    <string name="auth_error_message">User doesn"'"t exist or login/password incorrect</string>
    <string name="register_error_title">Register error</string>
    <string name="register_error_message">Fields filled incorrect or current user already exist</string>
    <string name="forgot_pass_error_title">Request error</string>
    <string name="forgot_pass_error_message">Request error. Invalide parameters or internal server error</string>

    <!-- API -->
        <!-- Login API -->
    <string name="user_name">username</string>
    <string name="user_password">password</string>

    <string name="simple_name">name</string>

        <!-- Registration API -->
    <string name="f_name">fname</string>
    <string name="l_name">lname</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
        <!-- Signal types-->
    <string name="signal_type_topgainers">topgainers</string>
    <string name="signal_type_toplosers">toplosers</string>
    <string name="signal_type_newhigh">newhigh</string>
    <string name="signal_type_newlow">newlow</string>
    <string name="signal_type_unusualvolume">unusualvolume</string>
    <string name="signal_type_mostvolatile">mostvolatile</string>
        <!-- watchLists -->
    <string name="watch_lists_ticker_id">ticker_id</string>
    <string name="watch_lists_ticker">ticker</string>
    <string name="watch_lists_wl_id">wl_id</string>
    <string name="watch_lists_no_watch_list_dialog_title">No watchlists</string>
    <string name="watch_lists_no_watch_list_dialog_message">Please create and select watchlist</string>

    <!-- Tab -->
    <string name="tab_market">Market</string>
    <string name="tab_portfolio">Portfolio</string>
    <string name="tab_watchlists">Watchlists</string>
    <string name="tab_search">Search</string>
    <string name="tab_news">News</string>
    <string name="tab_edit">Edit</string>
    <string name="tab_add">Add</string>
    <string name="tab_done">Done</string>
    <string name="tab_sort">Sort</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_notifications_title">NOTIFICATIONS</string>
    <string name="settings_notifications_title_push">PUSH NOTIFICATIONS</string>
    <string name="settings_item_portfolio">Portfolio summary</string>
    <string name="settings_item_conf_call">Conference calls</string>
    <string name="settings_item_dividends">Dividends</string>
    <string name="settings_item_earnings">Earnings</string>
    <string name="settings_item_licence">Licence Agreement</string>
    <string name="settings_item_about">About us</string>
    <string name="settings_item_email">Email us</string>
    <string name="settings_item_rate">Rate app</string>

    <!-- Market -->
    <string name="market_sub_title_signals">Signals</string>
    <string name="market_sub_title_events">Events</string>

    <string name="market_item_top_gainers">Top Gainers</string>
    <string name="market_item_top_losers">Top Losers</string>
    <string name="market_item_new_high">New High</string>
    <string name="market_item_new_low">New Low</string>
    <string name="market_item_unusual_volume">Unusual volume</string>
    <string name="market_item_most_volatile">Most Volatile</string>

    <string name="market_item_earnings">Earnings</string>
    <string name="market_item_conference_calls">Conference calls</string>
    <string name="market_item_dividends">Dividends</string>
    <string name="market_item_splits">Splits</string>
    <string name="market_item_ipo">IPO</string>

    <string name="day_events_title">Day events</string>

    <!-- Stock detail-->
    <string name="stock_detail_title">Stock detail</string>

        <!-- Indexes -->
    <string name="index_type_1_name">S&amp;P500</string>
    <string name="index_type_2_name">NASDAQ</string>
    <string name="index_type_3_name">DOW</string>

    <!-- Dynamic chart -->
    <string name="dynamic_chart_title">Chart</string>
    <string name="dynamic_chart_static">Static</string>
    <string name="dynamic_chart_dynamic">Interactive</string>

    <!-- Indicators -->
    <string name="first_group_indicators_title">First group indicators</string>
    <string name="second_group_indicators_title">Second group indicators</string>
    <string name="first_indicators_title_short">First group</string>
    <string name="second_indicators_title_short">Second group</string>
    <string name="first_section_indicators_title">Added</string>
    <string name="second_section_indicators_title">All indicators</string>

    <!-- Watchlists -->
    <string name="watchlists_add_new_title">Add new list</string>
    <string name="watchlists_add_new_dialog_hint">Enter list name</string>
    <string name="watchlists_no_lists">No lists</string>
    <string name="watchlists_add_new_stock_title">Add new stock</string>
    <string name="watchlists_add_new_stock_dialog_hint">Enter ticker</string>
    <string name="watchlists_delete">Delete</string>

    <!-- Portfolio -->
    <string name="portfolio_summary">Summary</string>
    <string name="portfolio_add_dialog_title">Add new portfolio</string>
    <string name="portfolio_add_dialog_message">Enter portfolio name</string>
    <string name="portfolio_today_profit">Today Profit &amp; Loss</string>
    <string name="portfolio_total_profit">Total Profit &amp; Loss</string>

</resources>
