<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.fatelon.stocksplus.view.customviews.CustomTitle
        android:id="@+id/registration_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_tab_height"
        app:main_text="@string/registration_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="@dimen/screen_side_padding"
            android:paddingRight="@dimen/screen_side_padding">
            <EditText
                android:id="@+id/registration_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding"
                android:focusableInTouchMode="true"
                android:maxLines="1"
                android:inputType="text"
                android:layout_marginTop="@dimen/screen_common_padding"
                android:background="@drawable/edit_text_back"
                android:hint="@string/registration_first_name"
                android:textSize="@dimen/login_common_text_size"/>
            <EditText
                android:id="@+id/registration_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding"
                android:maxLines="1"
                android:inputType="text"
                android:layout_marginTop="@dimen/screen_common_padding"
                android:background="@drawable/edit_text_back"
                android:hint="@string/registration_last_name"
                android:textSize="@dimen/login_common_text_size"/>
            <EditText
                android:id="@+id/registration_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding"
                android:focusableInTouchMode="true"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:layout_marginTop="@dimen/screen_common_padding"
                android:background="@drawable/edit_text_back"
                android:hint="@string/registration_email"
                android:textSize="@dimen/login_common_text_size"/>
            <EditText
                android:id="@+id/registration_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding"
                android:maxLines="1"
                android:inputType="number"
                android:layout_marginTop="@dimen/screen_common_padding"
                android:background="@drawable/edit_text_back"
                android:hint="@string/registration_phone"
                android:textSize="@dimen/login_common_text_size"/>
            <EditText
                android:id="@+id/registration_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding"
                android:focusableInTouchMode="true"
                android:maxLines="1"
                android:inputType="text"
                android:layout_marginTop="@dimen/screen_common_padding"
                android:background="@drawable/edit_text_back"
                android:hint="@string/registration_user_name"
                android:textSize="@dimen/login_common_text_size"/>
            <EditText
                android:id="@+id/registration_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding"
                android:maxLines="1"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/screen_common_padding"
                android:background="@drawable/edit_text_back"
                android:hint="@string/registration_password"
                android:textSize="@dimen/login_common_text_size"/>
            <EditText
                android:id="@+id/registration_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/edit_text_padding"
                android:focusableInTouchMode="true"
                android:maxLines="1"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/screen_common_padding"
                android:background="@drawable/edit_text_back"
                android:hint="@string/registration_confirm_password"
                android:textSize="@dimen/login_common_text_size"/>
            <Button
                android:id="@+id/registration_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/screen_common_padding"
                android:paddingLeft="@dimen/login_button_side_padding"
                android:paddingRight="@dimen/login_button_side_padding"
                android:background="@color/darkGrayBackground"
                android:textColor="@color/whiteTextColor"
                android:text="@string/registration_sign_up"
                android:textSize="@dimen/login_common_text_size"
                android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>