<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mainBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/screen_side_padding"
        android:paddingRight="@dimen/screen_side_padding"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/main_logo"/>
        <com.fatelon.stocksplus.view.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_common_padding"
            android:textColor="@color/whiteTextColor"
            android:text="@string/login_screen_label"
            app:font_type="5"
            android:textSize="@dimen/login_title_text_size"/>
        <EditText
            android:id="@+id/login_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_text_padding"
            android:focusableInTouchMode="true"
            android:maxLines="1"
            android:inputType="text"
            android:layout_marginTop="@dimen/screen_common_padding"
            android:background="@drawable/edit_text_back"
            android:hint="@string/login_screen_hint_user"
            android:textSize="@dimen/login_common_text_size"/>
        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_text_padding"
            android:maxLines="1"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/screen_common_padding"
            android:background="@drawable/edit_text_back"
            android:hint="@string/login_screen_hint_pass"
            android:textSize="@dimen/login_common_text_size"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/screen_common_padding"
            android:gravity="left">
            <com.fatelon.stocksplus.view.customviews.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_screen_save_me"
                android:textColor="@color/whiteTextColor"
                app:font_type="1"/>
            <CheckBox
                android:id="@+id/login_save_me_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.Widget.AppCompat.CompoundButton.CheckBox"/>
        </LinearLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_common_padding"
            android:stretchColumns="*"
            android:shrinkColumns="*"
            android:gravity="center">
            <TableRow>
                <com.fatelon.stocksplus.view.customviews.CustomTextView
                    android:id="@+id/forgot_password_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    app:font_type="1"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="@dimen/login_common_text_size"
                    android:text="@string/login_screen_forgot_pass"/>

                <com.fatelon.stocksplus.view.customviews.CustomTextView
                    android:id="@+id/new_user_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    app:font_type="1"
                    android:textColor="@color/yellow"
                    android:textSize="@dimen/login_common_text_size"
                    android:text="@string/login_screen_new_user"/>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_common_padding"
            android:paddingLeft="@dimen/login_button_side_padding"
            android:paddingRight="@dimen/login_button_side_padding"
            android:background="@color/darkGrayBackground"
            android:textColor="@color/whiteTextColor"
            android:text="@string/login_screen_button_login"
            android:textSize="@dimen/login_common_text_size"
            android:textAllCaps="false"/>
    </LinearLayout>
</RelativeLayout>