<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_tab_height"
        android:background="@color/darkMenuBackground">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*"
            android:gravity="center">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/screen_side_padding"
                    android:layout_gravity="left|center_vertical"
                    android:textSize="@dimen/login_common_text_size"
                    android:textColor="@color/whiteTextColor"
                    android:text="@string/tab_edit"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/login_title_text_size"
                    android:textColor="@color/whiteTextColor"
                    android:layout_gravity="center"
                    android:text="@string/tab_portfolio"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/screen_side_padding"
                    android:layout_gravity="right|center_vertical"
                    android:textSize="@dimen/login_common_text_size"
                    android:textColor="@color/whiteTextColor"
                    android:text="@string/tab_add"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>