<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/darkMenuBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:visibility="gone"
        android:id="@+id/settings_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_menu_layout"
        android:background="@color/mainBackground"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.fatelon.stocksplus.view.customviews.CustomTitle
            android:id="@+id/settings_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_tab_height"
            app:main_text="@string/settings_title"/>

        <ScrollView
            android:layout_marginTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/mainBackground">

                <com.fatelon.stocksplus.view.customviews.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/darkMenuBackground"
                    android:text="@string/settings_notifications_title_push"
                    android:textSize="@dimen/item_text_size"
                    android:textColor="@color/lightGrayBackground"
                    android:padding="@dimen/screen_side_padding"
                    app:font_type="1"/>


                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height"
                    android:background="@color/mainBackground">

                    <com.fatelon.stocksplus.view.customviews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="@dimen/screen_side_padding"
                        android:textColor="@color/whiteTextColor"
                        android:textSize="@dimen/item_text_size"
                        android:text="@string/settings_item_portfolio"/>

                    <CheckBox
                        android:id="@+id/settings_portfolio_check_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/screen_side_padding"/>

                </RelativeLayout>
                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGrayBackground"
                    android:layout_marginLeft="@dimen/screen_side_padding"
                    android:layout_marginRight="@dimen/screen_side_padding"/>
                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height"
                    android:background="@color/mainBackground">

                    <com.fatelon.stocksplus.view.customviews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="@dimen/screen_side_padding"
                        android:textColor="@color/whiteTextColor"
                        android:textSize="@dimen/item_text_size"
                        android:text="@string/settings_item_conf_call"/>

                    <CheckBox
                        android:id="@+id/settings_conf_calls_check_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/screen_side_padding"/>

                </RelativeLayout>
                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGrayBackground"
                    android:layout_marginLeft="@dimen/screen_side_padding"
                    android:layout_marginRight="@dimen/screen_side_padding"/>

                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height"
                    android:background="@color/mainBackground">

                    <com.fatelon.stocksplus.view.customviews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="@dimen/screen_side_padding"
                        android:textColor="@color/whiteTextColor"
                        android:textSize="@dimen/item_text_size"
                        android:text="@string/settings_item_dividends"/>

                    <CheckBox
                        android:id="@+id/settings_dividends_check_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/screen_side_padding"/>

                </RelativeLayout>
                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGrayBackground"
                    android:layout_marginLeft="@dimen/screen_side_padding"
                    android:layout_marginRight="@dimen/screen_side_padding"/>
                <RelativeLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height"
                    android:background="@color/mainBackground">

                    <com.fatelon.stocksplus.view.customviews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="@dimen/screen_side_padding"
                        android:textColor="@color/whiteTextColor"
                        android:textSize="@dimen/item_text_size"
                        android:text="@string/settings_item_earnings"/>

                    <CheckBox
                        android:id="@+id/settings_earnings_check_box"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/screen_side_padding"/>

                </RelativeLayout>
                <com.fatelon.stocksplus.view.customviews.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/darkMenuBackground"
                    android:text="@string/settings_notifications_title"
                    android:textSize="@dimen/item_text_size"
                    android:textColor="@color/lightGrayBackground"
                    android:padding="@dimen/screen_side_padding"
                    app:font_type="1"/>

                <com.fatelon.stocksplus.view.customviews.CustomMarketItem
                    android:id="@+id/settings_licence_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:market_item_name="@string/settings_item_licence"/>
                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGrayBackground"
                    android:layout_marginLeft="@dimen/screen_side_padding"
                    android:layout_marginRight="@dimen/screen_side_padding"/>
                <com.fatelon.stocksplus.view.customviews.CustomMarketItem
                    android:id="@+id/settings_about_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:market_item_icon="@mipmap/top_losers"
                    app:market_item_name="@string/settings_item_about"/>
                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGrayBackground"
                    android:layout_marginLeft="@dimen/screen_side_padding"
                    android:layout_marginRight="@dimen/screen_side_padding"/>
                <com.fatelon.stocksplus.view.customviews.CustomMarketItem
                    android:id="@+id/settings_email_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:market_item_name="@string/settings_item_email"/>
                <View android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGrayBackground"
                    android:layout_marginLeft="@dimen/screen_side_padding"
                    android:layout_marginRight="@dimen/screen_side_padding"/>
                <com.fatelon.stocksplus.view.customviews.CustomMarketItem
                    android:id="@+id/settings_rate_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:market_item_name="@string/settings_item_rate"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/darkMenuBackground">
                    <Button
                        android:id="@+id/logout_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/screen_side_padding"
                        android:background="@color/red"
                        android:text="@string/settings_logout"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</RelativeLayout>